--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="calculator-grid">
         <div class="output">
-            <div class="previouse-operand"></div>
-            <div class="current-opperand"></div>
+            <div class="previous-operand"></div>
+            <div class="current-operand"></div>
         </div>
 
         <button class="span-two">AC</button>
